--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
   <script src="js/jquery-3.4.1.js"></script>
+  <script src="js/bootstrap.js"></script>
   <script src="js/scripts.js"></script>
   <title>Pig Dice</title>
 </head>
@@ -18,6 +19,7 @@
 
   <div class="container">
     <div class="row">
+      <!-- Player 1 Section  -->
       <div class="col-md-6">
         <h2>Player 1</h2>
 
@@ -52,6 +54,25 @@
       </div>
     </div>
   </div>
+
+  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
   
 </body>
 </html>
