--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="container">
     <div class="row">
       <!-- Player 1 Section  -->
-      <div class="col-md-6">
+      <div id="player1" class="col-md-6">
         <h2>Player 1</h2>
 
         <button type="button" class="btn-lg btn-primary" id="player1roll">Roll</button>
@@ -36,7 +36,9 @@
         <br>
         <p class="form-control" id="player1roundPoints"></p>
       </div>
-      <div class="col-md-6">
+
+      <!-- Player 2 Section  -->
+      <div id="player2" class="col-md-6">
         <h2>Player 2</h2>
 
         <button type="button" class="btn-lg btn-primary" id="player2roll">Roll</button>
@@ -65,7 +67,15 @@
             </button>
           </div>
           <div class="modal-body">
-            ...
+            <div id="showRolled1">
+              <p>You just rolled a 1!</p>
+            </div>
+            <div id="player1turn">
+              <p>It's player 1's turn!</p>
+            </div>
+            <div id="player2turn">
+                <p>It's player 2's turn!</p>
+            </div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -73,6 +83,6 @@
         </div>
       </div>
     </div>
-  
+
 </body>
 </html>
