Fix show modal output

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </div>
           <div class="modal-body">
             <div id="showRolled1">
-              <p>You just rolled a 1!</p>
+              <p>You just rolled a number 1</p>
             </div>
             <div id="player1turn">
               <p>It's player 1's turn!</p>
